k8s/api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: sorinmatei/review-app:v2
          ports:
            - containerPort: 3333
          imagePullPolicy: Always
