k8s/api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 3333
      targetPort: 3333
  type: LoadBalancer
