k8s/api.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
    - host: review-app.evoware-software.ro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-service  
                port:
                  number: 3333
